# KrampusHack2019

./: CMakeLists.txt  Krampus2019.cbp  Krampus2019Linux.cbp  KrampusServer.cbp  KrampusServerLinux.cbp  README.txt  krampus_client.cpp  krampus_master_server.cpp  krampus_server.cpp  krampus_server_client_test.cpp
include/: globals.hpp
include/eagle/: BinStream.hpp.save  ConsoleWidget.hpp  ConsoleWidget.hpp.save  Transitions.hpp
include/krampus/: Menu.hpp  Scenes.hpp
include/networking/: Network.hpp  Server.hpp
src/: globals.cpp  krampus_main.cpp  krampus_master_server.cpp
src/eagle/: BinStream.cpp  BinStream.hpp  ConsoleWidget.cpp  Transitions.cpp
src/krampus/: Entity.cpp  Entity.hpp  Menu.cpp  Menu.hpp  Scenes.cpp  Scenes.hpp  TextIconButton.cpp  TextIconButton.hpp
src/networking/: Client.cpp  Client.hpp  Network.cpp  Network.hpp  Server.cpp  Server.cpp.save  Server.hpp
